--- a/App.html
+++ b/App.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="App.css">
 </head>
 <body>
-<a href="Fromscratch.html" target="_self">Back to my Scratch Page</a>
+<a href="index.html" target="_self">Back to my Scratch Page</a>
 <div class="container">
     <h1>AI-Powered Riddle Generator</h1>
     <p class="riddle" id="riddleText"></p>
