--- a/Resume.html
+++ b/Resume.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Link to go back to the Scratch Page -->
-<a href="Fromscratch.html" target="_self">Back to my Scratch Page</a>
+<a href="index.html" target="_self">Back to my Scratch Page</a>
 
     <div class="common header">
         <h1>Nikayle Henderson Resume</h1>
