--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#success-stories">Success Stories</a></li>
             <li><a href="#training">Mental Training Exercises</a></li>
             <li><a href="#gallery">Motivational Quotes</a></li>
-            <p><a href="app.html">Try the AI-Powered Riddle Generator</a></p>
+            <li><a href="app.html">Try the AI-Powered Riddle Generator</a></li>
     
             
         </ul>
